[gd_scene load_steps=5 format=2]

[ext_resource path="res://Gift/gift.gd" type="Script" id=1]
[ext_resource path="res://Gift/gifts.png" type="Texture" id=2]
[ext_resource path="res://audio/gift.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[node name="gift" type="Area2D" groups=[
"gift",
]]
scale = Vector2( 8, 8 )
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 3
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.2, 0.2 )

[node name="gift_sound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = 5.0
[connection signal="body_entered" from="." to="." method="_on_gift_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
